# cpp-project-example

./: .travis.yml  Dockerfile  LICENSE.txt  README.md  buildspec.yml  test.sh
01-general-executable/: .gitignore  CMakeLists.txt
01-general-executable/src/: CMakeLists.txt
01-general-executable/src/libPalindrome/: CMakeLists.txt  palindrome.cpp
01-general-executable/src/palindrome/: main.cpp
01-general-executable/test/: CMakeLists.txt  palindrome_test.cpp
02-general-lib/: .gitignore  CMakeLists.txt
02-general-lib/src/libPalindrome/: palindrome.cpp
03-android-jni/: update_jni_headers.sh
03-android-jni/app/: CMakeLists.txt  build.gradle
03-android-jni/app/src/androidTest/java/se/edument/palindrome/: ExampleInstrumentedTest.java
03-android-jni/app/src/main/: AndroidManifest.xml
03-android-jni/app/src/main/cpp/: CMakeLists.txt
03-android-jni/app/src/main/cpp/libPalindrome/: CMakeLists.txt  palindrome.h
03-android-jni/app/src/main/cpp/libPalindrome_jni/: CMakeLists.txt  palindrome_jni.cpp
03-android-jni/app/src/main/cpp/libPalindrome_jni/jni/: se_edument_palindrome_PalindromeActivity.h
03-android-jni/app/src/main/java/se/edument/palindrome/: PalindromeActivity.java
03-android-jni/app/src/main/res/layout/: activity_palindrome.xml
03-android-jni/app/src/main/res/values/: strings.xml
03-android-jni/app/src/test/cpp/: CMakeLists.txt
03-android-jni/app/src/test/java/se/edument/palindrome/: ExampleUnitTest.java
03-android-jni/gradle/wrapper/: gradle-wrapper.properties
general-lib/: CMakeLists.txt
general-lib/contrib/cmake-downloadProject/: README.md
general-lib/src/: CMakeLists.txt
general-lib/src/include/palindrome/: palindrome.h
general-lib/src/libPalindrome/: CMakeLists.txt  palindrome.c
general-lib/src/palindrome/: CMakeLists.txt  main.cpp
general-lib/test/: CMakeLists.txt  palindrome_test.cpp
